--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-security.user.name=paul
+security.user.name=user
 security.user.password=password
+security.oauth2.client.clientId:user
+security.oauth2.client.clientSecret:password
+security.oauth2.client.authorized-grant-types:client_credentials
+security.oauth2.client.scope: any
+
